; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_voucher.c_mach_voucher_extract_attr_recipe.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_voucher.c_mach_voucher_extract_attr_recipe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 (%struct.TYPE_7__*, i32, i32*, i64, i32*, i32, i32*)* }
%struct.TYPE_6__ = type { i32, i32, i32, i32, i32 }

@MACH_VOUCHER_ATTR_VALUE_MAX_NESTED = common dso_local global i32 0, align 4
@IV_NULL = common dso_local global i64 0, align 8
@KERN_INVALID_ARGUMENT = common dso_local global i64 0, align 8
@IV_UNUSED_VALINDEX = common dso_local global i64 0, align 8
@KERN_SUCCESS = common dso_local global i64 0, align 8
@KERN_NO_SPACE = common dso_local global i64 0, align 8
@MACH_VOUCHER_ATTR_NOOP = common dso_local global i32 0, align 4
@MACH_VOUCHER_NAME_NULL = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@IVAM_NULL = common dso_local global %struct.TYPE_7__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mach_voucher_extract_attr_recipe(i64 %0, i32 %1, i64 %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca %struct.TYPE_7__*, align 8
  %14 = alloca %struct.TYPE_6__*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32, align 4
  store i64 %0, i64* %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  %19 = load i32, i32* @MACH_VOUCHER_ATTR_VALUE_MAX_NESTED, align 4
  %20 = zext i32 %19 to i64
  %21 = call i8* @llvm.stacksave()
  store i8* %21, i8** %10, align 8
  %22 = alloca i32, i64 %20, align 16
  store i64 %20, i64* %11, align 8
  %23 = load i64, i64* @IV_NULL, align 8
  %24 = load i64, i64* %6, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %4
  %27 = load i64, i64* @KERN_INVALID_ARGUMENT, align 8
  store i64 %27, i64* %5, align 8
  store i32 1, i32* %18, align 4
  br label %121

28:                                               ; preds = %4
  %29 = load i32, i32* %7, align 4
  %30 = call i64 @iv_key_to_index(i32 %29)
  store i64 %30, i64* %16, align 8
  %31 = load i64, i64* %6, align 8
  %32 = load i64, i64* %16, align 8
  %33 = call i64 @iv_lookup(i64 %31, i64 %32)
  store i64 %33, i64* %15, align 8
  %34 = load i64, i64* @IV_UNUSED_VALINDEX, align 8
  %35 = load i64, i64* %15, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %40

37:                                               ; preds = %28
  %38 = load i32*, i32** %9, align 8
  store i32 0, i32* %38, align 4
  %39 = load i64, i64* @KERN_SUCCESS, align 8
  store i64 %39, i64* %5, align 8
  store i32 1, i32* %18, align 4
  br label %121

40:                                               ; preds = %28
  %41 = load i32*, i32** %9, align 8
  %42 = load i32, i32* %41, align 4
  %43 = sext i32 %42 to i64
  %44 = icmp ult i64 %43, 20
  br i1 %44, label %45, label %47

45:                                               ; preds = %40
  %46 = load i64, i64* @KERN_NO_SPACE, align 8
  store i64 %46, i64* %5, align 8
  store i32 1, i32* %18, align 4
  br label %121

47:                                               ; preds = %40
  %48 = load i64, i64* %8, align 8
  %49 = inttoptr i64 %48 to i8*
  %50 = bitcast i8* %49 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %50, %struct.TYPE_6__** %14, align 8
  %51 = load i32, i32* %7, align 4
  %52 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %53 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %52, i32 0, i32 4
  store i32 %51, i32* %53, align 4
  %54 = load i32, i32* @MACH_VOUCHER_ATTR_NOOP, align 4
  %55 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %56 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %55, i32 0, i32 2
  store i32 %54, i32* %56, align 4
  %57 = load i32, i32* @MACH_VOUCHER_NAME_NULL, align 4
  %58 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %59 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %58, i32 0, i32 3
  store i32 %57, i32* %59, align 4
  %60 = load i32*, i32** %9, align 8
  %61 = load i32, i32* %60, align 4
  %62 = sext i32 %61 to i64
  %63 = sub i64 %62, 20
  %64 = trunc i64 %63 to i32
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %66 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %65, i32 0, i32 0
  store i32 %64, i32* %66, align 4
  %67 = load i64, i64* %16, align 8
  %68 = load i32, i32* @FALSE, align 4
  %69 = call i32 @ivgt_lookup(i64 %67, i32 %68, %struct.TYPE_7__** %13, i32* null)
  %70 = load %struct.TYPE_7__*, %struct.TYPE_7__** @IVAM_NULL, align 8
  %71 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %72 = icmp eq %struct.TYPE_7__* %70, %71
  br i1 %72, label %73, label %75

73:                                               ; preds = %47
  %74 = load i64, i64* @KERN_INVALID_ARGUMENT, align 8
  store i64 %74, i64* %5, align 8
  store i32 1, i32* %18, align 4
  br label %121

75:                                               ; preds = %47
  %76 = load i64, i64* %16, align 8
  %77 = load i64, i64* %15, align 8
  %78 = call i32 @ivace_lookup_values(i64 %76, i64 %77, i32* %22, i64* %12)
  %79 = load i64, i64* %12, align 8
  %80 = icmp slt i64 0, %79
  %81 = zext i1 %80 to i32
  %82 = call i32 @assert(i32 %81)
  %83 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %84 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %83, i32 0, i32 0
  %85 = load i64 (%struct.TYPE_7__*, i32, i32*, i64, i32*, i32, i32*)*, i64 (%struct.TYPE_7__*, i32, i32*, i64, i32*, i32, i32*)** %84, align 8
  %86 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %87 = load i32, i32* %7, align 4
  %88 = load i64, i64* %12, align 8
  %89 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %90 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %89, i32 0, i32 2
  %91 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %92 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %91, i32 0, i32 1
  %93 = load i32, i32* %92, align 4
  %94 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %95 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %94, i32 0, i32 0
  %96 = call i64 %85(%struct.TYPE_7__* %86, i32 %87, i32* %22, i64 %88, i32* %90, i32 %93, i32* %95)
  store i64 %96, i64* %17, align 8
  %97 = load i64, i64* @KERN_SUCCESS, align 8
  %98 = load i64, i64* %17, align 8
  %99 = icmp eq i64 %97, %98
  br i1 %99, label %100, label %119

100:                                              ; preds = %75
  %101 = load i32*, i32** %9, align 8
  %102 = load i32, i32* %101, align 4
  %103 = sext i32 %102 to i64
  %104 = sub i64 %103, 20
  %105 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %106 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %105, i32 0, i32 0
  %107 = load i32, i32* %106, align 4
  %108 = sext i32 %107 to i64
  %109 = icmp uge i64 %104, %108
  %110 = zext i1 %109 to i32
  %111 = call i32 @assert(i32 %110)
  %112 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %113 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %112, i32 0, i32 0
  %114 = load i32, i32* %113, align 4
  %115 = sext i32 %114 to i64
  %116 = add i64 20, %115
  %117 = trunc i64 %116 to i32
  %118 = load i32*, i32** %9, align 8
  store i32 %117, i32* %118, align 4
  br label %119

119:                                              ; preds = %100, %75
  %120 = load i64, i64* %17, align 8
  store i64 %120, i64* %5, align 8
  store i32 1, i32* %18, align 4
  br label %121

121:                                              ; preds = %119, %73, %45, %37, %26
  %122 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %122)
  %123 = load i64, i64* %5, align 8
  ret i64 %123
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @iv_key_to_index(i32) #2

declare dso_local i64 @iv_lookup(i64, i64) #2

declare dso_local i32 @ivgt_lookup(i64, i32, %struct.TYPE_7__**, i32*) #2

declare dso_local i32 @ivace_lookup_values(i64, i64, i32*, i64*) #2

declare dso_local i32 @assert(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
